--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion '1.2.0'
     }
     packagingOptions {
         resources {
@@ -59,7 +59,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.datastore:datastore-core:1.0.0'
 
@@ -73,18 +73,18 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha16"
+    implementation "androidx.compose.material3:material3:1.0.0-beta02"
     implementation "androidx.compose.material:material:1.2.1"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     // hilt
-    implementation "com.google.dagger:hilt-android:2.39.1"
+    implementation "com.google.dagger:hilt-android:2.43.2"
     implementation "androidx.hilt:hilt-common:1.0.0"
-    kapt "com.google.dagger:hilt-compiler:2.40.1"
+    kapt "com.google.dagger:hilt-compiler:2.42"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    kaptAndroidTest "com.google.dagger:hilt-compiler:2.40.1"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:2.42"
 
     //data store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
