--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-alpha03'
+        compose_version = '1.3.0-beta02'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.0-alpha09' apply false
-    id 'com.android.library' version '7.4.0-alpha09' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '7.4.0-alpha10' apply false
+    id 'com.android.library' version '7.4.0-alpha10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
